# cpp-query-builder

./: CMakeLists.txt  README.md  main.cpp
src/: Builder.cpp  Builder.h  Collection.cpp  Collection.h  Connection.cpp  Connection.h
test/: builder_check.cpp  main.cpp  test_shadow.h
